Fix Packet Listener and target java 11 like Velocity